--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "rsbuild dev --open",
     "build": "rsbuild build",
+    "check": "biome check --write",
+    "dev": "rsbuild dev --open",
+    "format": "biome format --write",
     "preview": "rsbuild preview"
   },
   "eslintConfig": {
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@rsbuild/core": "^1.0.1",
     "@rsbuild/plugin-react": "^1.0.1",
     "@rsbuild/plugin-sass": "^1.0.2"
