--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=production
+      - CLIENT_PORT=3000
+      - SERVER_PORT=3001
+      - HOSTED_URL=http://ec2-52-59-11-149.eu-central-1.compute.amazonaws.com
+      - LOCAL_HOSTED_URL=http://localhost
 
   client:
     build:
@@ -22,3 +26,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - PUBLIC_CLIENT_PORT=3000
+      - PUBLIC_SERVER_PORT=3001
+      - PUBLIC_HOSTED_URL=http://ec2-52-59-11-149.eu-central-1.compute.amazonaws.com
+      - PUBLIC_LOCAL_HOSTED_URL=http://localhost
