added versioning, added func to remove selected card, warning fixes

--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ PUBLIC_CLIENT_PORT=3000
 PUBLIC_SERVER_PORT=3001
 PUBLIC_HOSTED_URL=http://ec2-52-59-11-149.eu-central-1.compute.amazonaws.com
 PUBLIC_LOCAL_HOSTED_URL=http://localhost
+PUBLIC_VERSION_NUBMER=1.0.2
