--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,8 @@ services:
     volumes:
       - ./server:/app
       - /app/node_modules
-    environment:
-      - NODE_ENV=production
-      - CLIENT_PORT=3000
-      - SERVER_PORT=3001
-      - HOSTED_URL=http://ec2-52-59-11-149.eu-central-1.compute.amazonaws.com
-      - LOCAL_HOSTED_URL=http://localhost
+    env_file:
+      - .env
 
   client:
     build:
@@ -24,9 +20,5 @@ services:
     volumes:
       - ./client:/app
       - /app/node_modules
-    environment:
-      - NODE_ENV=development
-      - PUBLIC_CLIENT_PORT=3000
-      - PUBLIC_SERVER_PORT=3001
-      - PUBLIC_HOSTED_URL=http://ec2-52-59-11-149.eu-central-1.compute.amazonaws.com
-      - PUBLIC_LOCAL_HOSTED_URL=http://localhost
+    env_file:
+      - .env
